# graphqshell

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  graphqshell.cabal  package.yaml  shell.nix  stack.yaml
graphql_server/: Cargo.toml  Makefile  README.md
graphql_server/src/: main.rs  schema.rs
graphqshell/: .travis.yml  Cargo.toml  ChangeLog.md  LICENSE  Makefile  README.md  graphqshell.cabal  hie.yaml  package.yaml  stack.yaml
graphqshell/.stack-work/: stack.sqlite3
graphqshell/.stack-work/ghci/303bb575/: cabal_macros.h
graphqshell/app/: Main.hs
graphqshell/benchmark/: Main.hs
graphqshell/config/: config.docker.yaml  config.local.yaml  config.yaml  dev.toml  example.yaml  theme.ini
graphqshell/crates/graphqshell_application/: Cargo.toml
graphqshell/crates/graphqshell_core/: Cargo.toml
graphqshell/crates/graphqshell_core/src/: lib.rs
graphqshell/crates/graphqshell_core/src/domain/: mod.rs
graphqshell/crates/graphqshell_core/src/infra/: mod.rs
graphqshell/crates/graphqshell_gui_frontend/: Cargo.toml  README.md
graphqshell/crates/graphqshell_gui_tauri/: Cargo.toml  tauri.conf.json
graphqshell/demo_server/: Main.hs
graphqshell/src/: Utils.hs  app.rs  engine.rs  graphql.rs  lib.rs  main.rs  utils.rs
graphqshell/src/Application/: TuiApp.hs
graphqshell/src/Application/Tui/: Action.hs  App.hs  Keymap.hs  Screen.hs  Types.hs
graphqshell/src/Application/TuiApp/: IO.hs  Shared.hs
graphqshell/src/Application/TuiApp/Components/: CommandBar.hs  Main.hs
graphqshell/src/Application/TuiApp/Configuration/: Types.hs  Validation.hs
graphqshell/src/GraphQL/: API.hs  Client.hs  Internal.hs  Introspection.hs  Types.hs
graphqshell/src/GraphQL/Client/: Types.hs
graphqshell/src/GraphQL/Introspection/: Schema.hs
graphqshell/src/GraphQL/Introspection/Marshalling/: Types.hs
graphqshell/src/GraphQL/Introspection/Schema/: Types.hs
graphqshell/src/GraphQL/Marshalling/: Utils.hs
graphqshell/src/GraphQL/Schema/: Introspection.hs
graphqshell/src/GraphQL/Schema/Introspection/: Internal.hs
graphqshell/src/Infrastructure/: TuiEngine.hs
graphqshell/src/Infrastructure/TuiEngine/: Components.hs  DataGraph.hs  IO.hs  Keymap.hs
graphqshell/src/Shell/: Application.hs  Configuration.hs  Continuation.hs  KeyMap.hs  Main.hs  SDL.hs  State.hs  Theme.hs
graphqshell/src/Shell/Components/: CommandBar.hs  Introspection.hs  Introspector.hs  Main.hs  Shared.hs  Types.hs  Utilities.hs
graphqshell/src/Shell/Components/Introspector/: Event.hs  ObjectType.hs
graphqshell/src/Shell/Configuration/: Marshalling.hs  Types.hs  Validation.hs
graphqshell/src/adapter/: configuration.rs  mod.rs
graphqshell/src/adapter/tui_app/: mod.rs
graphqshell/src/adapter/tui_app/tui/: input.rs  mod.rs
graphqshell/src/app/: configuration.rs  engine.rs  io.rs  ui.rs
graphqshell/src/app/components/: schema.rs
graphqshell/src/app/engine/: application.rs  io.rs  ui.rs
graphqshell/src/app/ui/: events.rs
graphqshell/src/application/: mod.rs
graphqshell/src/application/gui_app/: app.rs
graphqshell/src/application/termui_app/: action.rs  app.rs  configuration.rs  event.rs  io.rs  keymap.rs  mod.rs  theme.rs  views.rs
graphqshell/src/application/termui_app/component/: command_bar.rs  mod.rs
graphqshell/src/application/termui_app/components/: command_bar.rs  introspector.rs  main.rs  mod.rs
graphqshell/src/application/termui_app/introspector/: mod.rs
graphqshell/src/application/termui_app2/: app.rs  mod.rs
graphqshell/src/application/tui_app/: mod.rs
graphqshell/src/engine/: README.md  application.rs  io.rs  ui.rs
graphqshell/src/frontend/: tui.rs
graphqshell/src/frontend/tui/: activity.rs  context.rs  keymap.rs  state.rs
graphqshell/src/graphql/: api.rs  client.rs  introspection.rs  schema.rs
graphqshell/src/graphql/schema/: introspection.rs
graphqshell/src/infra/: mod.rs
graphqshell/src/infra/termui/: mod.rs
graphqshell/src_old/: Utils.hs
graphqshell/src_old/Application/TuiApp/: Configuration.hs  Shared.hs  State.hs
graphqshell/src_old/GraphQL/: API.hs  Client.hs
graphqshell/src_old/GraphQL/Api/: Types.hs
graphqshell/src_old/GraphQL/Client/: Types.hs
graphqshell/src_old/GraphQL/Marshalling/: Utils.hs
graphqshell/src_old/Infrastructure/TuiEngine/: Events.hs  Keys.hs
graphqshell/src_old/Minimal/: Engine.hs
graphqshell/test/: ExampleTest.hs
graphqshell/test/GraphQL/Schema/: Fixtures.hs  IntrospectionTest.hs
graphqshell/test/Infrastructure/TuiEngine/: DataGraphTest.hs  KeyMapTest.hs
graphqshell/test/Shell/: ConfigurationTest.hs  KeyMapTest.hs
graphqshell/test/Shell/Components/: UtilitiesTest.hs
(+89 files in other folders)
