[package]
name = "graphqshell"
version = "0.1.0"
authors = ["certainty <david.krentzlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tui = "0.12.0"
termion = "1.5.5"
linefeed = "0.6.0"
reqwest = "0.10.8"
serde = "1.0.117"
serde_json = "1.0.59"
clap-v3 = "3.0.0-beta.1"
unicode-width = "0.1.8"
url = "2.1.1"


[dev-dependencies]
juniper = "0.14.2"
juniper_warp = "0.5.2"
