[package]
name = "graphql_server"
version = "0.1.0"
authors = ["certainty <david.krentzlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.8.1"
log = "0.4.0"
serde = "1.0.117"
serde_json = "1.0.59"
juniper = {version = "0.14.2", features = ["expose-test-schema", "serde_json"] }
actix-web = "3.2.0"
actix-cors = "0.5.0"
tokio = { version = "0.3.2", features = ["full"] }

