[package]
name = "graphqshell"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["crates/*/"]

[features]
debug = []

[dependencies]
graphqshell_core = { path = "./crates/graphqshell_core" }
graphqshell_gui_frontend = { path = "./crates/graphqshell_gui_frontend" }

[[bin]]
name = "graphqshell"
path = "src/main.rs"
