[package]
name = "graphqshell_core"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
pretty_env_logger = "0.4"
thiserror = "1.0"
anyhow = "1.0"

config = "0.11"
url = "2.2"
duration-str = "0.3"
chrono = "0.4"
url_serde = "0.2"
toml = "0.5"

directories = "3.0"
rand = "0.8.4"
serde = "1.0"

backtrace = "0.3"

# graphql
cynic = "0.15.0"

# schema analysis
fuzzy-matcher = "0.3.7"

rustc-hash = { version = "1.0" }

[dev-dependencies]
matches = "0.1"
quickcheck = "1"
quickcheck_macros = "1.0"
